--- a/myweb.html
+++ b/myweb.html
@@ -21,9 +21,18 @@
         line-height: 1.7;
       "
     >
+      <marquee
+      scrolldelay="100ms"
+      scrollamount="10ms"
+      style="width: full;
+      height: 30px;
+      background-color: blanchedalmond;
+      margin: 0px;
+      padding: 5px;"
+      >这是一个滚动测试</marquee>
       <p>LOL</p>
       <p>LOL</p>
-      <p>LOL</p>
+      <p>LOL</p>  
     </div>
     <div
       style="
